--- a/composer.json
+++ b/composer.json
@@ -10,11 +10,7 @@
     }
   ],
   "require": {
-    "slim/slim": "2.6",
-    "palanik/corsslim": "*",
-    "doctrine/dbal": "^2.5",
-    "slim/views": "^0.1.3",
-    "twig/twig": "^1.23"
+    "slim/slim": "^3.2"
   },
   "autoload": {
     "psr-4": {
