--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
   "name": "shiniwolf/shiniwork",
-  "description": "Framework based on Slim Framework 2",
+  "description": "Framework based on Slim Framework 3",
   "type": "library",
   "license": "MIT",
   "authors": [
@@ -10,12 +10,13 @@
     }
   ],
   "require": {
-    "slim/slim": "^3.2"
+    "slim/slim": "^3.2",
+    "slim/twig-view": "^2.0"
   },
   "autoload": {
     "psr-4": {
       "Shiniwork\\": "Shiniwork",
-      "Website\\": "website/src"
+      "Website\\": "website/app/src"
     }
   }
 }
