--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,8 @@
   ],
   "require": {
     "slim/slim": "^3.2",
-    "slim/twig-view": "^2.0"
+    "slim/twig-view": "^2.0",
+    "doctrine/dbal": "^2.5"
   },
   "autoload": {
     "psr-4": {
