--- a/composer.json
+++ b/composer.json
@@ -1,25 +1,25 @@
 {
   "name": "shiniwolf/shiniwork",
-  "description": "Framework based on Slim Framework 2",
+  "description": "Shiniwork is PHP Framework based on Slim 3",
+  "minimum-stability": "stable",
   "type": "library",
   "license": "MIT",
   "authors": [
     {
-      "name": "Kevin Philippe",
+      "name": "Philippe Kevin",
       "email": "kevin.philippe06@gmail.com"
     }
   ],
   "require": {
-    "slim/slim": "2.6",
-    "palanik/corsslim": "*",
-    "doctrine/dbal": "^2.5",
-    "slim/views": "^0.1.3",
-    "twig/twig": "^1.23"
+    "slim/slim": "^3.3",
+    "slim/twig-view": "^2.1",
+    "tuupola/slim-jwt-auth": "^2.1",
+    "swiftmailer/swiftmailer": "^5.4",
+    "illuminate/database": "^5.2"
   },
   "autoload": {
     "psr-4": {
-      "Shiniwork\\": "Shiniwork",
-      "Website\\": "website/src"
+      "Shiniwork\\": "Shiniwork"
     }
   }
 }
